tests/negative/int_not_numeric.rkl
; A String that is not a numeric literal cannot be converted.
(int "abc")
